overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,5 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden ! important;
 }
